Fixed a small issue with vertical radio buttons not un-selecting. Added an animated reveal to the radio hide control so the transition is less jarring. Fixed a spacing issue with the error message. Removed css that meant none js browsers didn't see questions.

--- a/src/AppBundle/Resources/assets/scss/components/_forms.scss
+++ b/src/AppBundle/Resources/assets/scss/components/_forms.scss
@@ -135,6 +135,10 @@ form {
 
 }
 
+.form-group.sub-section-title {
+    padding-left: 15px;
+}
+
 .form-group_button-bar {
   padding-top: $gutter * 2;
 }
