--- a/src/AppBundle/Resources/assets/scss/elements/forms/_form-validation.scss
+++ b/src/AppBundle/Resources/assets/scss/elements/forms/_form-validation.scss
@@ -8,7 +8,8 @@
 
   padding: 0;
   margin: 40px 0 40px 0;
-  max-width: 560px;
+  max-width: 540px;
+  position: relative;
 
   .page-report-content & {
     margin-bottom: 20px;
@@ -32,8 +33,6 @@
   }
 }
 
-.page-report-content {
-    .validation-summary {
-        width: 100%;
-    }
+.safeguarding-page .validation-summary-container {
+    max-width: 520px;
 }
